<?xml version="1.0"?>
<package format="3">
  <name>ap_planning_examples</name>
  <version>0.0.0</version>
  <description>Examples for planning with screw-based affordance primitives</description>

  <maintainer email="adam.pettinger@utexas.edu">Adam Pettinger</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Proprietary, see attached</license>

  <author email="adam.pettinger@utexas.edu">Adam Pettinger</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ap_planning</depend>
  <depend>moveit_visual_tools</depend>

  <exec_depend>bio_ik</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>trac_ik</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
